<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".08"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/red"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_font" />


    <TextView
        android:id="@+id/orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".10"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/orange"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_font" />

    <TextView
        android:id="@+id/yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".12"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/yellow"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_font" />

    <TextView
        android:id="@+id/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".14"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/green"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_font" />

    <TextView
        android:id="@+id/blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".16"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/blue"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_font" />

    <TextView
        android:id="@+id/indigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".18"
        android:background="@color/indigo"
        android:gravity="center"
        android:text="@string/indigo"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_font" />

    <TextView
        android:id="@+id/violet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".22"
        android:background="@color/violet"
        android:gravity="center"
        android:text="@string/violet"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_font" />

</LinearLayout>